--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   padding: 20px 40px;
   /* Use margin-bottom to create vertical space.
   Avoid mixing bottom and top. */
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
   /* height: 80px; */
 }
 
@@ -38,7 +38,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .post-header {
@@ -180,7 +180,6 @@ a:active {
 
 nav a:link {
   margin-right: 30px;
-  margin-top: 10px;
   display: inline-block;
 }
 
@@ -236,13 +235,13 @@ h2::after {
 /* Floats */
 
 /* Note: an element's height will collapse if all of its children are floats */
-.author-img {
-  /* float takes element out of document's flow */
-  /* all other elements will now "float" around this element */
-  float: left;
+/* .author-img { */
+/* float takes element out of document's flow */
+/* all other elements will now "float" around this element */
+/* float: left;
   margin-bottom: 20px;
-}
-
+} */
+/* 
 .author {
   float: left;
   margin-top: 10px;
@@ -255,20 +254,20 @@ h1 {
 
 nav {
   float: right;
-}
+} */
 
 /* "Clear" a float - fixes parent's height collapse */
-.clear {
+/* .clear {
   clear: both;
-}
+} */
 
 /* "clear fix hack" with pseudo element - avoid cluttering up HTML with empty divs to clear floats*/
-.clearfix::after {
+/* .clearfix::after {
   clear: both;
   content: "";
   display: block;
-}
-
+} */
+/* 
 article {
   width: 70%;
   float: left;
@@ -279,4 +278,91 @@ aside {
 }
 footer {
   clear: both;
+} */
+
+/* Flexbox */
+
+/* parent container/flex container of h1 and nav */
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author {
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  /* use gap on flex containers instead of margin */
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+/* Flexbox Layout */
+/* .row {
+  display: flex;
+  align-items: flex-start;
+  gap: 75px;
+  margin-bottom: 60px;
+}
+
+article {
+  flex: 1;
+  margin-bottom: 0;
+}
+
+aside {
+  defaults:
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: auto;
+  flex: 0 0 300px;
+} */
+
+/* CSS Grid Layout */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
+}
+
+.main-header {
+  grid-column: 1 / -1;
+}
+
+article {
+}
+
+aside {
+}
+
+footer {
+  grid-column: 1/-1;
 }
